gomon-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gomon-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: go.mon.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gomonapp
                port:
                  number: 3000
